# sc2mpd

./: .gitignore  Makefile.am  README.asc  configure.ac  ohbuild.sh
debian/: changelog  control  copyright  rules  watch
doc/: sc2mpd.html  sc2mpd.txt
mpd2src/: audioreader.h  audioutil.h  fiforeader.cpp  fiforeader.h  mpd2sc.cpp  openaudio.cpp  openaudio.h  scmakempdsender  scmakempdsender.py  stringtotokens.cpp  stringtotokens.h  wavreader.cpp  wavreader.h
sc2src/: alsadirect.cpp  chrono.cpp  config.h.in  conftree.cpp  conftree.h  httpgate.cpp  log.cpp  log.h  ptmutex.h  rcvqueue.h  sc2mpd.cpp
src/: alsadirect.cpp  chrono.h  config.h.in  httpgate.cpp  rcvqueue.h  sc2mpd.cpp  wav.cpp  workqueue.h
